# casa_rs

./: .gitignore  .mise.toml  Cargo.toml  Dockerfile  README.md  railway.toml
src/: auth.rs  config.rs  db.rs  error.rs  forms.rs  main.rs  models.rs  templates.rs
templates/: base.html  contacts.html  cosa.html  index.html  login.html  notes.html  reminders.html
