[package]
name = "casa"
version = "0.1.0"
edition = "2024"

[package.metadata.askama]
templates = "templates"

[dependencies]
anyhow = "1"
axum = "0.8"
askama = "0.15"
chrono = "0.4.44"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
cookie = "0.18.1"
jsonwebtoken = "9"
serde_json = "1"
